--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'android.arch.persistence.room:runtime:1.0.0'
     annotationProcessor 'android.arch.persistence.room:compiler:1.0.0'
-
-
+    testCompile 'org.mockito:mockito-core:1.10.19'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    testCompile 'com.android.support.test:rules:0.5'
+    testCompile 'com.android.support.test:runner:0.5'
     implementation 'com.android.support:cardview-v7:26.1.0'
 }
